flux/cluster/apps/gitops/agola/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agola
  namespace: gitops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agola
  template:
    metadata:
      labels:
        app: agola
    spec:
      containers:
        - name: agola
          image: sorintlab/agola:v0.7.0
          command:
            - /bin/agola
            - serve
            - "--config"
            - /mnt/agola/local/config.yml
            - "--components"
            - all-base,executor
          ports:
            - containerPort: 8000
            - containerPort: 4000
            - containerPort: 4002
            - containerPort: 4003
          volumeMounts:
            - name: config-volume
              mountPath: /mnt/agola/config
            - name: agola-localdata
              mountPath: /mnt/agola/local
      volumes:
        - name: config-volume
          configMap:
            name: agola
        - name: agola-localdata
          emptyDir: {}
