flux/cluster/apps/gitops/agola/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agola
  namespace: gitops
spec:
  ingressClassName: traefik
  rules:
  - host: agola.0x76.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: agola
            port: 
              number: 8000
